testsuite/poke.pkl/printf-diag-17.pk
/* { dg-do compile } */

fun foo = (any a) void:
 {
   printf "%v\n", a; /* { dg-error "any" } */
 }
